--- a/transforms/dbt_project.yml
+++ b/transforms/dbt_project.yml
@@ -34,5 +34,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   transforms:
     # Config indicated by + and applies to all files under models/example/
-    stagin:
+    staging:
       +materialized: view
+    marts:
+      +materialized: table
+      +schema: marts
+    
